manifests/service-2.yml
apiVersion: v1
kind: Service
metadata:
    name: "azkubernetes1-70f7"
    labels:
        app: "azkubernetes1-70f7"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "azkubernetes1-70f7"
